--- a/public/electrical/sem2/engineeringmathematics.html
+++ b/public/electrical/sem2/engineeringmathematics.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-2 books download , C4300002 ,EM,Engineering Mathematics download for free , Computer">
+        content="gtu diploma sem-2 books download , C4300002 ,EM,Engineering Mathematics download for free , Electircal">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" Engineering Mathematics Sem-2 book Free Download, Computer Sem-2 All Study Material free, Get GTU Diploma Computer books free download, Sem-2 Diploma Engineering">
+        content=" >Engineering Mathematics  Sem-2 book Free Download, Electircal Sem-2 All Study Material free, Get GTU Diploma Electircal books free download, Sem-2 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Diploma Engineering Mathematics - KhudKibook GTU </title>
+    <title>Electircal Diploma Engineering Mathematics - KhudKibook GTU </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -29,9 +29,9 @@
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a class="nvi751" href="/computer/sem2/homepage.html">Computer Sem-2 </a>
+            <a class="nvi751" href="/electrical/sem2/homepage.html">Electrical Sem-2 </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/computer/sem2/engineeringmathematics.html">Engineering Mathematics</a>
+            <a id="atnvli953" href="/electrical/sem2/engineeringmathematics.html">Engineering Mathematics </a>
         </div>
     </div>
     <main>
@@ -78,7 +78,7 @@
                             <a href="https://drive.google.com/uc?export=download&id=1JC8fR0liC9WTFaetIltBzV9Dq1ytjIwD">2022
                             </a>
                         </div>
-                        </div>
+                    </div>
 
                 </div>
             </div>
@@ -92,7 +92,7 @@
     </h1>
     <div aria-label="main content " class="ab12345">
         <!-- Physics -->
-        <a href="/computer/sem2/physics.html">
+        <a href="/electrical/sem2/physics.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/019.png" alt="" srcset="">
                 <div class="mali147852">
@@ -103,25 +103,26 @@
                 </div>
             </div>
         </a>
-        <!--  Basic Object Oriented Programming -->
-        <a href="/computer/sem2/BOOP.html">
+
+        <!--  Basic Engineering Drawing and Graphics -->
+        <a href="/electrical/sem2/BEDG.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/029.png" alt="coverpage">
+                <img class="i12345" src="/img/021.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Basic Object Oriented Programming</h1>
-                    <h1 class="d111">C4320702</h1>
-                    <h1 class="d212">Credit-5</h1>
+                    <h1 class="bn159">Basic Engineering Drawing and Graphics</h1>
+                    <h1 class="d111">C4300013</h1>
+                    <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!-- Basics of Digital Electronics -->
-        <a href="/computer/sem2/BDE.html">
+        <!-- A.C. Circuits -->
+        <a href="/electrical/sem2/ACC.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/008.png" alt="" srcset="">
+                <img class="i12345" src="/img/0.png" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Basics of Digital Electronics </h1>
-                    <h1 class="d111">C4320703</h1>
+                    <h1 class="bn159">A.C. Circuits </h1>
+                    <h1 class="d111">C4320901</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
@@ -129,65 +130,56 @@
         </a>
 
     </div>
-    <!-- Sem-1 -->
+
+
+    <!-- Sem-2 -->
     <h1 class="kl789123">
         Semester-1
     </h1>
-    <div class="ab12345">
-        <!-- es -->
-        <a href="/computer/sem1/environmentandsustainability.html">
+    <div aria-label="main content " class="ab12345">
+        <!-- EC  -->
+        <a href="/electrical/sem1/EC.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/005.png" alt="" srcset="">
+                <img class="i12345" src="/img/015.png" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Environment and Sustainablity </h1>
-                    <h1 class="d111">4300005</h1>
-                    <h1 class="d212">Credit-3</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                    </div>
-                    </div>
-                    </a>
-                    <!--  FOEE -->
-                    <a href="/computer/sem1/foee.html">
-                        <div class="abc123456">
-                            <img class="i12345" src="/img/018.png" alt="coverpage">
-                            <div class="mali147852">
-                                <h1 class="bn159">Fundamentals of Electrical and Electronics</h1>
-                                <h1 class="d111">4300018</h1>
+                    <h1 class="bn159">Engineering Chemistry </h1>
+                    <h1 class="d111">C4300006</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
-                    </div>
-                    
-                    </div>
-                    </a>
-                    <!--  BCP -->
-                    <a href="/computer/sem1/BCP.html">
-                        <div class="abc123456">
-                            <img class="i12345" src="/img/002.png" alt="coverpage">
-                            <div class="mali147852">
-                                <h1 class="bn159"> Basic Computer Programming</h1>
-                                <h1 class="d111">4310702</h1>
-                                <h1 class="d212">Credit-5</h1>
-                                <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!--  DCC -->
+        <a href="/electrical/sem1/DCC.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/na.webp" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159"> D.C. Circuits</h1>
+                    <h1 class="d111">C4310901</h1>
+                    <h1 class="d212">Credit-5</h1>
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
 
 
             </div>
         </a>
-        <!-- Maths  -->
-        <a href="/computer/sem1/mathematics.html">
+
+        <!-- Maths -->
+        <a href="/electrical/sem1/mathematics.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/008.png" alt="coverpage">
+                <img class="i12345" src="/img/008.png" alt="" srcset="">
                 <div class="mali147852">
                     <h1 class="bn159">Mathematics </h1>
-                    <h1 class="d111">4320002</h1>
+                    <h1 class="d111">4300001</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
+
 
             </div>
         </a>
         <!-- English -->
-        <a href="/computer/sem1/english.html">
+        <a href="/electrical/sem1/english.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/014.png" alt="" srcset="">
                 <div class="mali147852">
@@ -201,160 +193,153 @@
             </div>
         </a>
     </div>
-    
     <!-- Sem-3 -->
     <h1 class="kl789123">
         Semester-3
     </h1>
     <div aria-label="main content " class="ab12345">
-        <!-- Scripting Language -Python  -->
-        <a href="/computer/sem3/SLP.html">
+        <!-- D. C. Machines And Transformer -->
+        <a href="/electrical/sem3/DCMT.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Scripting Language -Python </h1>
-                    <h1 class="d111">4330701</h1>
-                    <h1 class="d212">Credit-5</h1>
+                    <h1 class="bn159">D. C. Machines And Transformer </h1>
+                    <h1 class="d111">4330901</h1>
+                    <h1 class="d212">Credit-6</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!--  BCP -->
-        <a href="/computer/sem3/RDBMS.html">
+        <!-- Electrical Instrumentation -->
+        <a href="/electrical/sem3/EI.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/038.png" alt="coverpage">
+                <img class="i12345" src="/img/040.png" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159"> Relational Database Management System</h1>
-                    <h1 class="d111">4330702</h1>
-                    <h1 class="d212">Credit-5</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-
-
-            </div>
-        </a>
-        <!--  Basics of Operating System -->
-        <a href="/computer/sem3/BOS.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/039.png" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Basics of Operating System</h1>
-                    <h1 class="d111">4330703</h1>
+                    <h1 class="bn159">Electrical Instrumentation </h1>
+                    <h1 class="d111">4330902</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
-
-
             </div>
         </a>
-        <!-- Data Structures and Algorithms -->
-        <a href="/computer/sem3/DSA.html">
+        <!--  Electrical Power Generation and Transmission -->
+        <a href="/electrical/sem3/EPGT.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="" srcset="">
+                <img class="i12345" src="/img/041.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Data Structures and Algorithms </h1>
-                    <h1 class="d111">4330704</h1>
+                    <h1 class="bn159">Electrical Power Generation and Transmission</h1>
+                    <h1 class="d111">4330903</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
-
-
             </div>
         </a>
+        <!--  Fundamentals Of Electronics -->
+        <a href="/electrical/sem3/FE.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/043.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159"> Fundamentals Of Electronics</h1>
+                    <h1 class="d111">4330904</h1>
+                    <h1 class="d212">Credit-5</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+
     </div>
-    <!-- Sem-4 -->
-    <h1 class="kl789123">
+    <!-- Sem4 -->
+    <h2 class="kl789123">
         Semester-4
-    </h1>
+    </h2>
     <!-- Compulsory -->
     <h2 class="kl789123">
         Compulsory (Sem-4)
     </h2>
     <div aria-label="main content " class="ab12345">
-        <!-- Advanced Object Oriented Programming  -->
-        <a href="/computer/sem4/AOOP.html">
+        <!-- Polyphase Transformers and Rotating AC Machines -->
+        <a href="/electrical/sem4/PTRACM.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Advanced Object Oriented Programming </h1>
-                    <h1 class="d111">4340701</h1>
+                    <h1 class="bn159">Polyphase Transformers and Rotating AC Machinesr </h1>
+                    <h1 class="d111">4340901</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!-- Distribution and Utilization of Electrical Power -->
+        <a href="/electrical/sem4/DUEP.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Distribution and Utilization of Electrical Power </h1>
+                    <h1 class="d111">4330902</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!--  Electrical Wiring Estimating, Costing & Contracting -->
+        <a href="/electrical/sem4/EWECC.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/041.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159">Electrical Wiring Estimating, Costing & Contracting</h1>
+                    <h1 class="d111">4330903</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!--  Introduction to Software Engineering -->
-        <a href="/computer/sem4/ISE.html">
+        <!--  Digital Electronics & Digital Instruments -->
+        <a href="/electrical/sem4/DEDI.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="coverpage">
+                <img class="i12345" src="/img/043.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Introduction to Software Engineering </h1>
-                    <h1 class="d111">4340702</h1>
-                    <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-
-
-            </div>
-        </a>
-        <!--  Computer Networking -->
-        <a href="/computer/sem4/CN.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Computer Networking</h1>
-                    <h1 class="d111">4340703</h1>
-                    <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-
-
-            </div>
-        </a>
-        <!-- Introduction to Web Development -->
-        <a href="/computer/sem4/IWD.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Introduction to Web Development </h1>
-                    <h1 class="d111">4340704</h1>
+                    <h1 class="bn159"> Digital Electronics & Digital Instruments</h1>
+                    <h1 class="d111">4330904</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        </div>
-        <!-- Elective -->
-        <h2 class="kl789123">
-            Elective (Sem-4)
-        </h2>
-        <div aria-label="main content " class="ab12345">
-            <!-- Essence of Indian Knowledge and Tradition  -->
-            <a href="/it/sem4/EIKT.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Essence of Indian Knowledge and Tradition</h1>
-                        <h1 class="d111">4340001</h1>
-                        <h1 class="d212">Credit-2</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
+
+    </div>
+    <!-- Elective -->
+    <h2 class="kl789123">
+        Elective (Sem-4)
+    </h2>
+    <div aria-label="main content " class="ab12345">
+
+
+        <!-- Essence of Indian Knowledge and Tradition  -->
+        <a href="/it/sem4/EIKT.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Essence of Indian Knowledge and Tradition</h1>
+                    <h1 class="d111">4340001</h1>
+                    <h1 class="d212">Credit-2</h1>
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
-            </a>
-            <!--Contributor Personality Development  -->
-            <a href="/it/sem4/CPD.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Contributor Personality Development</h1>
-                        <h1 class="d111">4340002</h1>
-                        <h1 class="d212">Credit-2</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
+            </div>
+        </a>
+        <!--Contributor Personality Development  -->
+        <a href="/it/sem4/CPD.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Contributor Personality Development</h1>
+                    <h1 class="d111">4340002</h1>
+                    <h1 class="d212">Credit-2</h1>
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
-            </a>
-            <!--Integrated Personality Development Course  -->
-            <a href="/it/sem4/IPDC.html">
+            </div>
+        </a>
+        <!--Integrated Personality Development Course  -->
+        <a href="/it/sem4/IPDC.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
                 <div class="mali147852">
