--- a/public/electrical/sem4/PTRACM.html
+++ b/public/electrical/sem4/PTRACM.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-4 books download , 4340701 ,AOOP,Advanced Object Oriented Programming download for free , Computer">
+        content="gtu diploma sem-4 books download , 4340901 ,FE, Polyphase Transformers and Rotating AC Machinesr  download for free , Electircal">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" Advanced Object Oriented Programming  Sem-4 book Free Download, Computer Sem-4 All Study Material free, Get GTU Diploma Computer books free download, Sem-4 Diploma Engineering">
+        content="Polyphase Transformers and Rotating AC Machinesr   Sem-4 book Free Download, Electircal Sem-4 All Study Material free, Get GTU Diploma Electircal books free download, Sem-4 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Diploma Advanced Object Oriented Programming - KhudKibook GTU </title>
+    <title>Electircal Diploma Polyphase Transformers and Rotating AC Machinesr - KhudKibook GTU </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -22,16 +22,16 @@
     <nav id="nav">
     </nav>
     <header>
-        <h1 class="ph748">Advanced Object Oriented Programming Study Material </h1>
+        <h1 class="ph748"> Polyphase Transformers and Rotating AC Machinesr Study Material </h1>
     </header>
     <!-- navinfo -->
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a class="nvi751" href="/computer/sem4/homepage.html">Computer Sem-4 </a>
+            <a class="nvi751" href="/electrical/sem3/homepage.html">Electrical Sem-3 </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/computer/sem4/AOOP.html">Advanced Object Oriented Programming </a>
+            <a id="atnvli953" href="/electrical/sem3/FE.html"> Polyphase Transformers and Rotating AC Machinesr </a>
         </div>
     </div>
     <main>
@@ -41,14 +41,13 @@
                 <img class="mc7593512345" src="/img/na.webp" alt="Book Photo">
             </div>
             <div class="mac75935">
-                <h1 class="bn159">Advanced Object Oriented Programming </h1>
-
-                <h1 class="md111">4340701</h1>
-                <h1 class="md111">Credit-5</h1>
+                <h1 class="bn159">Polyphase Transformers and Rotating AC Machinesr </h1>
+                <h1 class="md111">4340901</h1>
+                <h1 class="md111">Credit-4</h1>
                 <div>
                     <button class="mdbtn" data-modal-id="modal-1">Book</button>
                     <!-- Syllabus -->
-                    <a href="https://drive.google.com/uc?export=download&id=">
+                    <a href="https://drive.google.com/uc?export=download&id=1LqG7ihkW8ko2DD6yTZhOxJ4a1dprLWCq">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
@@ -75,12 +74,14 @@
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=">2022
+                            <a href="https://drive.google.com/uc?export=download&id=1JM4XUX-YKAmF_MazugWGzNaqw0e-gPPS">2022
                             </a>
                         </div>
                     </div> -->
+
                 </div>
             </div>
+
         </div>
     </main>
 
@@ -88,52 +89,47 @@
     <h1 class="kl789123">
         Recommnded Acording to your Semester
     </h1>
-    <!-- Compulsory -->
     <h2 class="kl789123">
         Compulsory (Sem-4)
     </h2>
     <div aria-label="main content " class="ab12345">
-
-        <!--  Introduction to Software Engineering -->
-        <a href="/computer/sem4/ISE.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Introduction to Software Engineering </h1>
-                    <h1 class="d111">4340702</h1>
-                    <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-
-
-            </div>
-        </a>
-        <!--  Computer Networking -->
-        <a href="/computer/sem4/CN.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Computer Networking</h1>
-                    <h1 class="d111">4340703</h1>
-                    <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-
-
-            </div>
-        </a>
-        <!-- Introduction to Web Development -->
-        <a href="/computer/sem4/IWD.html">
+        <!-- Distribution and Utilization of Electrical Power -->
+        <a href="/electrical/sem4/DUEP.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Introduction to Web Development </h1>
-                    <h1 class="d111">4340704</h1>
+                    <h1 class="bn159">Distribution and Utilization of Electrical Power </h1>
+                    <h1 class="d111">4330902</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!--  Electrical Wiring Estimating, Costing & Contracting -->
+        <a href="/electrical/sem4/EWECC.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/041.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159">Electrical Wiring Estimating, Costing & Contracting</h1>
+                    <h1 class="d111">4330903</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
+        <!--  Digital Electronics & Digital Instruments -->
+        <a href="/electrical/sem4/DEDI.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/043.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159"> Digital Electronics & Digital Instruments</h1>
+                    <h1 class="d111">4330904</h1>
+                    <h1 class="d212">Credit-5</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+
     </div>
     <!-- Elective -->
     <h2 class="kl789123">
@@ -183,39 +179,26 @@
     <h1 class="kl789123">
         Semester-1
     </h1>
-    <div class="ab12345">
-        <!-- es -->
-        <a href="/computer/sem1/environmentandsustainability.html">
+    <div aria-label="main content " class="ab12345">
+        <!-- EC  -->
+        <a href="/electrical/sem1/EC.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/005.png" alt="" srcset="">
+                <img class="i12345" src="/img/015.png" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Environment and Sustainablity </h1>
-                    <h1 class="d111">4300005</h1>
-                    <h1 class="d212">Credit-3</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
-        <!--  FOEE -->
-        <a href="/computer/sem1/foee.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/018.png" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Fundamentals of Electrical and Electronics</h1>
-                    <h1 class="d111">4300018</h1>
+                    <h1 class="bn159">Engineering Chemistry </h1>
+                    <h1 class="d111">C4300006</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
-
             </div>
         </a>
-        <!--  BCP -->
-        <a href="/computer/sem1/BCP.html">
+        <!--  DCC -->
+        <a href="/electrical/sem1/DCC.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/002.png" alt="coverpage">
+                <img class="i12345" src="/img/na.webp" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159"> Basic Computer Programming</h1>
-                    <h1 class="d111">4310702</h1>
+                    <h1 class="bn159"> D.C. Circuits</h1>
+                    <h1 class="d111">C4310901</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
@@ -223,21 +206,23 @@
 
             </div>
         </a>
-        <!-- Maths  -->
-        <a href="/computer/sem1/mathematics.html">
+
+        <!-- Maths -->
+        <a href="/electrical/sem1/mathematics.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/008.png" alt="coverpage">
+                <img class="i12345" src="/img/008.png" alt="" srcset="">
                 <div class="mali147852">
                     <h1 class="bn159">Mathematics </h1>
-                    <h1 class="d111">4320002</h1>
+                    <h1 class="d111">4300001</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
 
+
             </div>
         </a>
         <!-- English -->
-        <a href="/computer/sem1/english.html">
+        <a href="/electrical/sem1/english.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/014.png" alt="" srcset="">
                 <div class="mali147852">
@@ -251,26 +236,13 @@
             </div>
         </a>
     </div>
-
     <!-- Sem-2 -->
     <h1 class="kl789123">
         Semester-2
     </h1>
     <div aria-label="main content " class="ab12345">
-        <!--  Engineering Mathematics -->
-        <a href="/computer/sem2/engineeringmathematics.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/022.png" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159"> Engineering Mathematics</h1>
-                    <h1 class="d111">C4320002</h1>
-                    <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
         <!-- Physics -->
-        <a href="/computer/sem2/physics.html">
+        <a href="/electrical/sem2/physics.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/019.png" alt="" srcset="">
                 <div class="mali147852">
@@ -281,25 +253,37 @@
                 </div>
             </div>
         </a>
-        <!--  Basic Object Oriented Programming -->
-        <a href="/computer/sem2/BOOP.html">
+        <!--  Engineering Mathematics -->
+        <a href="/electrical/sem2/engineeringmathematics.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/029.png" alt="coverpage">
+                <img class="i12345" src="/img/022.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Basic Object Oriented Programming</h1>
-                    <h1 class="d111">C4320702</h1>
-                    <h1 class="d212">Credit-5</h1>
+                    <h1 class="bn159"> Engineering Mathematics</h1>
+                    <h1 class="d111">C4320002</h1>
+                    <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!-- Basics of Digital Electronics -->
-        <a href="/computer/sem2/BDE.html">
+        <!--  Basic Engineering Drawing and Graphics -->
+        <a href="/electrical/sem2/BEDG.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/008.png" alt="" srcset="">
+                <img class="i12345" src="/img/021.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Basics of Digital Electronics </h1>
-                    <h1 class="d111">C4320703</h1>
+                    <h1 class="bn159">Basic Engineering Drawing and Graphics</h1>
+                    <h1 class="d111">C4300013</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!-- A.C. Circuits -->
+        <a href="/electrical/sem2/ACC.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/0.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">A.C. Circuits </h1>
+                    <h1 class="d111">C4320901</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
@@ -308,61 +292,60 @@
 
     </div>
     <!-- Sem-3 -->
-    <h1 class="kl789123">
+    <h2 class="kl789123">
         Semester-3
-    </h1>
+    </h2>
     <div aria-label="main content " class="ab12345">
-
-        <!-- Scripting Language -Python  -->
-        <a href="/computer/sem3/SLP.html">
+        <!-- D. C. Machines And Transformer -->
+        <a href="/electrical/sem3/DCMT.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Scripting Language -Python </h1>
-                    <h1 class="d111">4330701</h1>
-                    <h1 class="d212">Credit-5</h1>
+                    <h1 class="bn159">D. C. Machines And Transformer </h1>
+                    <h1 class="d111">4330901</h1>
+                    <h1 class="d212">Credit-6</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!--  RDBMS -->
-        <a href="/computer/sem3/RDBMS.html">
+        <!-- Electrical Instrumentation -->
+        <a href="/electrical/sem3/EI.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/038.png" alt="coverpage">
+                <img class="i12345" src="/img/040.png" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159"> Relational Database Management System</h1>
-                    <h1 class="d111">4330702</h1>
-                    <h1 class="d212">Credit-5</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
-        <!--  Basics of Operating System -->
-        <a href="/computer/sem3/BOS.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/039.png" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Basics of Operating System</h1>
-                    <h1 class="d111">4330703</h1>
+                    <h1 class="bn159">Electrical Instrumentation </h1>
+                    <h1 class="d111">4330902</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!-- Data Structures and Algorithms -->
-        <a href="/computer/sem3/DSA.html">
+        <!--  Electrical Power Generation and Transmission -->
+        <a href="/electrical/sem3/EPGT.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="" srcset="">
+                <img class="i12345" src="/img/041.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Data Structures and Algorithms </h1>
-                    <h1 class="d111">4330704</h1>
+                    <h1 class="bn159">Electrical Power Generation and Transmission</h1>
+                    <h1 class="d111">4330903</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-    </div>
+        <!--  Fundamentals Of Electronics -->
+        <a href="/electrical/sem3/FE.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/043.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159"> Fundamentals Of Electronics</h1>
+                    <h1 class="d111">4330904</h1>
+                    <h1 class="d212">Credit-5</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
 
+    </div>
     <!-- Footer -->
     <footer id="footer">
     </footer>
